headline Generated Prompt

--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
       </div>
     </div>
     <br><br><br>
-    <label>Generated Prompt</label>
+    <h3>Generated Prompt</h3>
     <div>
       <!-- <input type="text" id="promptOutput" readonly> -->
       <textarea rows="8" id="promptOutput" readonly></textarea>
