--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1>MidJourney Prompt Generator</h1>
 
     <div class="container">
-      <label for="mainIdea">Your Idea:</label>
+      <h3 for="mainIdea">Subject Description</h3>
       <!-- <input type="text" id="mainIdea" placeholder="Enter the main idea"><br> -->
-      <textarea rows="8" id="mainIdea" placeholder="Enter the main idea"></textarea>
+      <textarea rows="8" id="mainIdea" placeholder="a woman walking, a man talking, a dog running, a daisy flower,..."></textarea>
 
       <div class="grid">
         <!-- Add the rest of the input fields -->
