--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>MidJourney Prompt Generator</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js"></script>
   
 </head>
 
