background option added

--- a/index.html
+++ b/index.html
@@ -934,6 +934,18 @@
         </div>
 
         <div>
+          <label for="background">Background Color</label>
+          <select id="background">
+            <option value="">None</option>
+            <option value="white">White</option>
+            <option value="black">Black</option>
+            <option value="red">Red</option>
+
+            
+          </select>
+        </div>
+
+        <div>
           <label for="artist">Artist:</label>
           <input type="text" id="artist" placeholder="Enter the artist name">
         </div>
