Tile Checkbox added

--- a/index.html
+++ b/index.html
@@ -954,8 +954,18 @@
           <label for="film">Film:</label>
           <input type="text" id="film" placeholder="Enter the film name">
         </div>
+        
+        <!-- Tile Checkbox -->
+        <div>
+          <span class="get-inline"><input type="checkbox" id="tile" class="checkbox"></span>
+          <span class="get-inline"><label for="tile">Tile</label></span>
+          
+        </div>
+
+
       </div>
 
+  
 
 
       <!-- Follow the "aspectRatio" pattern for the other dropdowns -->
