--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <select id="view">
             <option value="">None</option>
             <optgroup label="Small to large">
-              
+
               <option value="panorama">Panorama</option>
               <option value="portrait">Portrait</option>
               <option value="landscape">Landscape</option>
@@ -359,6 +359,7 @@
         <div>
           <label for="camera">Camera</label>
           <select id="camera">
+            <option value="">None</option>
             <optgroup label="2020s">
               <option value="Nikon Z7 II">Nikon Z7 II</option>
               <option value="Canon EOS R5">Canon EOS R5</option>
@@ -438,6 +439,56 @@
             </optgroup>
           </select>
         </div>
+
+        <!-- Lenses -->
+        <div>
+          <label for="lens">Lens</label>
+          <select id="lens">
+            <option value="">None</option>
+            <optgroup label="Wide-Angle Lenses">
+              <option value="24mm f/1.4">24mm f/1.4</option>
+              <option value="24mm f/2.8">24mm f/2.8</option>
+              <option value="24mm f/5.6">24mm f/5.6</option>
+              <option value="24mm f/16">24mm f/16</option>
+              <option value="28mm f/1.8">28mm f/1.8</option>
+              <option value="28mm f/2.8">28mm f/2.8</option>
+              <option value="28mm f/8">28mm f/8</option>
+              <option value="28mm f/16">28mm f/16</option>
+              <option value="35mm f/1.4">35mm f/1.4</option>
+              <option value="35mm f/2">35mm f/2</option>
+              <option value="35mm f/8">35mm f/8</option>
+              <option value="35mm f/16">35mm f/16</option>
+            </optgroup>
+
+            <optgroup label="Standard Lenses">
+              <option value="50mm f/1.2">50mm f/1.2</option>
+              <option value="50mm f/1.4">50mm f/1.4</option>
+              <option value="50mm f/1.8">50mm f/1.8</option>
+              <option value="50mm f/8">50mm f/8</option>
+              <option value="50mm f/16">50mm f/16</option>
+              <option value="58mm f/1.4">58mm f/1.4</option>
+              <option value="85mm f/1.2">85mm f/1.2</option>
+              <option value="85mm f/1.8">85mm f/1.8</option>
+              <option value="85mm f/2">85mm f/2</option>
+              <option value="85mm f/5.6">85mm f/5.6</option>
+              <option value="105mm f/2.8">105mm f/2.8</option>
+              <option value="105mm f/5.6">105mm f/5.6</option>
+            </optgroup>
+
+            <optgroup label="Telephoto Lenses"> 
+              <option value="70-200mm f/2.8">70-200mm f/2.8</option>
+              <option value="70-200mm f/4">70-200mm f/4</option>
+              <option value="70-200mm f/16">70-200mm f/16</option>
+              <option value="85mm f/1.4">85mm f/1.4</option>
+              <option value="85mm f/1.8">85mm f/1.8</option>
+              <option value="135mm f/2">135mm f/2</option>
+              <option value="200mm f/2.8">200mm f/2.8</option>
+              <option value="300mm f/4">300mm f/4</option>
+            </optgroup>
+
+          </select>
+        </div>
+
 
         <div>
           <label for="lighting">Lighting</label>
