--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
           </select>
         </div>
 
+        <!-- Views -->
         <div>
           <label for="view">View</label>
           <select id="view">
@@ -356,6 +357,7 @@
           </select>
         </div>
 
+        <!-- Camera -->
         <div>
           <label for="camera">Camera</label>
           <select id="camera">
@@ -475,7 +477,7 @@
               <option value="105mm f/5.6">105mm f/5.6</option>
             </optgroup>
 
-            <optgroup label="Telephoto Lenses"> 
+            <optgroup label="Telephoto Lenses">
               <option value="70-200mm f/2.8">70-200mm f/2.8</option>
               <option value="70-200mm f/4">70-200mm f/4</option>
               <option value="70-200mm f/16">70-200mm f/16</option>
@@ -489,7 +491,35 @@
           </select>
         </div>
 
+        <!-- Films -->
+        <div>
+          <label for="films">Film</label>
+          <select id="films">
+            <option value="">None</option>
+            <optgroup label="Color Negative Films">
+              <option value="Kodak Portra 160">Kodak Portra 160</option>
+              <option value="Kodak Portra 400">Kodak Portra 400</option>
+              <option value="Kodak Portra 800">Kodak Portra 800</option>
+              <option value="Fujicolor Pro 400H">Fujicolor Pro 400H</option>
+              <option value="Ilford XP2 Super 400">Ilford XP2 Super 400</option>
+              <option value="Lomography Color Negative 100">Lomography Color Negative 100</option>
+              <option value="Lomography Color Negative 400">Lomography Color Negative 400</option>
+              <option value="Lomography Color Negative 800">Lomography Color Negative 800</option>
+            </optgroup>
+            <optgroup label="Black and White Films">
+              <option value="Kodak Tri-X 400">Kodak Tri-X 400</option>
+              <option value="Ilford HP5 Plus 400">Ilford HP5 Plus 400</option>
+              <option value="Ilford Delta 3200">Ilford Delta 3200</option>
+              <option value="Adox Silvermax 100">Adox Silvermax 100</option>
+              <option value="Fomapan 400">Fomapan 400</option>
+              <option value="Ferrania P30">Ferrania P30</option>
+              <option value="Rollei RPX 400">Rollei RPX 400</option>
+            </optgroup>
+          </select>
 
+        </div>
+
+        <!-- Lighting -->
         <div>
           <label for="lighting">Lighting</label>
           <select id="lighting">
@@ -596,7 +626,7 @@
 
         <div>
           <label for="descriptor">Descriptor</label>
-          <select id="descriptor">
+          <select id="descriptor">∏
             <option value="">None</option>
             <optgroup label="Realism">
               <option value="classical realism">Classical realism</option>
