--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>MidJourney Prompt Generator</title>
+  <title>Midjourney Prompt Generator</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="assets/style.css">
   <script src="assets/script.js"></script>
@@ -13,7 +13,7 @@
 
   <div class="outer-wrapper">
 
-    <h1>MidJourney Prompt Generator</h1>
+    <h1>Midjourney Prompt Generator</h1>
 
     <div class="container">
       <h3 for="mainIdea">Subject Description</h3>
@@ -1137,7 +1137,7 @@
 
       <!-- Follow the "aspectRatio" pattern for the other dropdowns -->
       <div>
-        <button onclick="generatePromptOutput()">Generate Prompt Output</button>
+        <a href="#copyButton"><button onclick="generatePromptOutput()">Generate Prompt Output</button></a>
 
       </div>
     </div>
