--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <select id="medium">
             <option value="">None</option>
             <optgroup label="Art Movements">
+              <option value="photograph">Cinematic Portrait</option>
               <option value="photograph">Photograph</option>
               <option value="drawing">Drawing</option>
               <option value="painting">Painting</option>
@@ -1128,6 +1129,12 @@
             <span class="get-inline"><label for="tile">Tile</label></span>
           </div>
         </div>
+
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider"></span>
+        </label>
+
 
 
       </div>
