Cinematic Portrait bug fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <select id="medium">
             <option value="">None</option>
             <optgroup label="Art Movements">
-              <option value="photograph">Cinematic Portrait</option>
+              <option value="Cinematic Portrait">Cinematic Portrait</option>
               <option value="photograph">Photograph</option>
               <option value="drawing">Drawing</option>
               <option value="painting">Painting</option>
