add Kodak Aerochrome

--- a/index.html
+++ b/index.html
@@ -516,6 +516,9 @@
               <option value="Ferrania P30">Ferrania P30</option>
               <option value="Rollei RPX 400">Rollei RPX 400</option>
             </optgroup>
+            <optgroup label="False-color Infrared">
+              <option value="Kodak Aerochrome">Kodak Aerochrome</option>
+            </optgroup>
           </select>
 
         </div>
