update ignore headline

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
       </div>
 
       <div>
-        <label for="ignore">Ignored Words:</label>
+        <label for="ignore">Ignore these words:</label>
         <textarea rows="2" id="ignore"></textarea>
       </div>
 
