add --style raw

--- a/index.html
+++ b/index.html
@@ -1128,11 +1128,18 @@
           <input type="text" id="film" placeholder="Enter the film name">
         </div>
 
-        <!-- Tile Checkbox -->
+        
+        <!-- Checkboxs -->
         <div>
+          <!-- Tile -->
           <div class="checkbox-div">
             <span class="get-inline"><input type="checkbox" id="tile" class="checkbox"></span>
             <span class="get-inline"><label for="tile">Tile</label></span>
+          </div>
+          <!-- Style Raw -->
+          <div class="checkbox-div">
+            <span class="get-inline"><input type="checkbox" id="raw" class="checkbox"></span>
+            <span class="get-inline"><label for="raw">Style Raw</label></span>
           </div>
         </div>
 
