--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
           placeholder="a woman walking, a man talking, a dog running, a daisy flower,..."
         ></textarea>
 
+        <div>
+          <label for="imageurl">Include Image-URL</label>
+          <textarea rows="1" id="imageurl" placeholder="Reference Image URL"></textarea>
+        </div>
+
         <div class="grid">
           <!-- Add the rest of the input fields -->
           <div>
