URL textarea changed to input

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           placeholder="a woman walking, a man talking, a dog running, a daisy flower,..."
         ></textarea>
 
+        <!-- Image URL reference -->
         <div>
           <label for="imageurl">Include Image-URL</label>
-          <textarea rows="1" id="imageurl" placeholder="Reference Image URL"></textarea>
+          <input type="text" id="imageurl" placeholder="Reference Image URL" />
         </div>
 
         <div class="grid">
@@ -1344,7 +1345,6 @@
               ><input type="checkbox" id="raw" class="checkbox"
             /></span>
             <span class="get-inline"><label for="raw">Style Raw</label></span>
-            
           </div>
         </div>
 
