--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
         <!-- Follow the "aspectRatio" pattern for the other dropdowns -->
         <div class="copyButton">
           <a href="#copyButton"
-            ><button onclick="generatePromptOutput()">
+            ><button onclick="generatePromptOutput()" class="button button-outline" >
               Generate Prompt Output
             </button></a
           >
@@ -1405,6 +1405,14 @@
             <!-- <button id="copyButton" onclick="copyToClipboard()">Copy Prompt</button> -->
 
             <span class="copyNotification" id="copyNotification"></span>
+          </div>
+        </div>
+        
+        <div id="footer">
+          <hr >
+          <div id="footer-text">
+            <p>Copyright © 2023, All Rights Reserved | <a href="imprint.html">Imprint</a></p>
+
           </div>
         </div>
       </div>
