intro color to black

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div id="intro">
           <hr />
           <div class="description">
-            A handy tool for generating advanced prompts in  <a href="https://midjourney.com/" target="_blank">Midjourney</a>. 
-            Version 0.4 - September 2023 - <a href="https://github.com/gummiz/Midjourney-Generator" target="_blank">Git Repository</a>
+            <span class="descriptionblack">A handy tool for generating advanced prompts in  <a href="https://midjourney.com/" target="_blank">Midjourney</a>. 
+            Version 0.4 - September 2023 - <a href="https://github.com/gummiz/Midjourney-Generator" target="_blank">Git Repository</a></span>
             <br>Developed by Stefan Kummerlöw.
             Connect with me on <a href="https://bit.ly/kummerloewLinkedIn" target="_blank">LinkedIn</a>, <a href="https://github.com/gummiz" target="_blank">GitHub</a>, <a href="https://x.com/tadaaptive" target="_blank">X</a> and  <a href="http://www.instagram.com/gummizzzz" target="_blank" rel="noopener noreferrer">Instagram</a> 
           </div>
