--- a/imprint.html
+++ b/imprint.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Midjourney Prompt Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
