--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <hr />
           <div class="description">
             <span class="descriptionblack">A handy tool for generating advanced prompts in  <a href="https://midjourney.com/" target="_blank">Midjourney</a>. 
-            Version 0.4 - September 2023 - <a href="https://github.com/gummiz/Midjourney-Generator" target="_blank">Git Repository</a></span>
+            Version 0.4 - September 2023 - <a href="https://github.com/gummiz/Midjourney-Generator" target="_blank">Quickguide</a></span>
             <br>Developed by Stefan Kummerlöw.
-            Connect with me on <a href="https://bit.ly/kummerloewLinkedIn" target="_blank">LinkedIn</a>, <a href="https://bit.ly/GithubTadaptive" target="_blank">GitHub</a>, <a href="https://bit.ly/XTadaptive" target="_blank">X</a> and  <a href="https://bit.ly/IGTadaptive" target="_blank" rel="noopener noreferrer">Instagram</a> 
+            Connect with me on <a href="https://bit.ly/kummerloewLinkedIn" target="_blank">LinkedIn</a>, <a href="https://bit.ly/GithubTadaptive" target="_blank">GitHub</a>, <a href="https://bit.ly/XTadaptive" target="_blank">X</a> and  <a href="https://bit.ly/IGTadaptive  " target="_blank" rel="noopener noreferrer">Instagram</a> 
           </div>
           
           <!-- <div id="creator">Created by Stefan Kummerlöw. Get in touch: <a href="https://bit.ly/kummerloewLinkedIn" target="_blank">LinkedIn</a>, <a href="https://github.com/gummiz" target="_blank">GitHub</a>, <a href="https://x.com/tadaaptive" target="_blank">X</a></div> -->
