--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
         <div id="footer">
           <hr >
           <div id="footer-text">
-            <p>Copyright © 2023, All Rights Reserved | <a href="imprint.html">Imprint</a></p>
+            <p>Copyright © 2023, All Rights Reserved </p>
 
           </div>
         </div>
