added Medium Film Still

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
             <select id="medium">
               <option value="">None</option>
               <optgroup label="Art Movements">
-                <option value="Cinematic Portrait">Cinematic Portrait</option>
                 <option value="photograph">Photograph</option>
+                <option value="film still">Film Still</option>
+                <option value="Cinematic Portrait">Cinematic Portrait</option>
                 <option value="drawing">Drawing</option>
                 <option value="painting">Painting</option>
                 <option value="abstract expressionist art style">
